# noise-suppression-for-voice

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: githubci.yml  release.yml
src/: RnNoiseAudioEffect.cpp  RnNoiseAudioEffect.h
src/common/: CMakeLists.txt
src/common/include/common/: RnNoiseCommonPlugin.h
src/common/src/: RnNoiseCommonPlugin.cpp
src/common/src/tests/: tests.cpp
src/juce_plugin/: CMakeLists.txt  RnNoiseAudioProcessor.cpp  RnNoiseAudioProcessor.h  RnNoisePluginEditor.cpp  RnNoisePluginEditor.h
src/ladspa_plugin/: CMakeLists.txt  RnNoiseLadspaPlugin.cpp  RnNoiseLadspaPlugin.h  ladspa++.h  ladspa.h
src/lv2_plugin/: CMakeLists.txt  RnNoiseLv2Lib.cpp  RnNoiseLv2Lib.h  RnNoiseLv2Plugin.cpp  RnNoiseLv2Plugin.h
src/lv2_plugin/lv2/lv2plug.in/ns/lv2core/: Lib.hpp  Plugin.hpp  lv2_util.h
src/lv2_plugin/lv2core/: Lib.hpp  Plugin.hpp  lv2.h  lv2_util.h
src/lv2_plugin/resources/: manifest.ttl  manifest_x32.ttl  manifest_x64.ttl  rnnoise.ttl
src/pluginterfaces/vst2.x/: FILES.txt
src/rnnoise/: CMakeLists.txt  celt_lpc.c  rnn.c  rnn.h  rnn_data.c  rnn_data.h  rnnoise.h
src/rnnoise/include/rnnoise/: _kiss_fft_guts.h  arch.h  celt_lpc.h  common.h  cpu_support.h  denoise.h  kiss_fft.h  nnet.h  opus_types.h  pitch.h  rnn.h  rnn_data.h  rnnoise.h  rnnoise_data.h  tansig_table.h  vec.h  vec_avx.h  vec_neon.h
src/rnnoise/include/rnnoise/x86/: dnn_x86.h  x86cpu.h
src/rnnoise/src/: celt_lpc.c  cpu_support.h  denoise.c  kiss_fft.c  nnet.c  nnet_default.c  parse_lpcnet_weights.c  pitch.c  rnn.c  rnn_data.c  rnnoise_demo.c  rnnoise_tables.c
src/rnnoise/src/x86/: nnet_avx2.c  nnet_sse4_1.c  x86_dnn_map.c  x86cpu.c
src/vst_plugin/: CMakeLists.txt  RnNoiseVstPlugin.cpp  RnNoiseVstPlugin.h
src/vst_plugin/vst2.x/: FILES.txt
toolchains/: toolchain-mingw32.cmake  toolchain-mingw64.cmake
